--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,8 @@ button {
 }
 
 .logo-light {
+    width: 100%;
+    height: 100%;
     background-image: url('/logo-white.png');
     background-position: center;
     background-size: contain;
@@ -19,6 +21,8 @@ button {
 }
 
 .logo-dark {
+    width: 100%;
+    height: 100%;
     background-image: url('/logo-black.png');
     background-position: center;
     background-size: contain;
